# vuln-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: scanner.yml
tests/: test_json_reporter.py  test_plugin.py  test_slack_notifier.py  test_target.py
vuln_scanner/: main.py
vuln_scanner/core/: plugin.py  scanner.py  target.py
vuln_scanner/notifiers/: slack.py
vuln_scanner/plugins/: cve_lookup.py
vuln_scanner/reporters/: base.py  factory.py  json_reporter.py
