[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-scanner"
version = "1.0.0"
description = "Vulnerability scanner for network devices and services"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.scripts]
vuln-scan = "vuln_scanner.main:entry_point"

[tool.pytest.ini_options]
testpaths = ["tests"]
